non-extern function also not defined

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "pennfat_kernel.h": "c",
     "stdint.h": "c",
     "stdbool.h": "c",
-    "fcntl.h": "c"
+    "fcntl.h": "c",
+    "pennfat.h": "c"
   }
 }
