--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "pennfat.h": "c",
     "penn-parser.h": "c",
     "stdlib.h": "c",
-    "types.h": "c"
+    "types.h": "c",
+    "typeinfo": "c"
   }
 }
