--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "prioritylist.h": "c",
     "sys_call.h": "c",
     "signal.h": "c",
-    "globals.h": "c"
+    "globals.h": "c",
+    "stdio.h": "c"
   }
 }
